events. With the new `OVERRIDE` option, non-file logs can be ECS-reformatted automatically as well - {pull}1793[#1793]
* Instrumentation for Vert.x Web {pull}1697[#1697]
* Changed log level of vm arguments to debug

[float]
===== Bug fixes
* Fix another error related to instrumentation plugins loading on Windows - {pull}1785[#1785]
* Load Spring AMQP plugin- {pull}1784[#1784]

[float]
===== Refactors
* Remove single-package limitation for embedded plugins - {pull}1780[#1780]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.23.0]]
==== 1.23.0 - 2021/04/22

[float]
===== Breaking changes
* There are breaking changes in the <<setup-attach-cli,attacher cli>>.
  See the Features section for more information.

[float]
===== Features
* Overhaul of the <<setup-attach-cli,attacher cli>> application that allows to attach the agent to running JVMs - {pull}1667[#1667]
** The artifact of the standalone cli applicaiton is now called `apm-agent-attach-cli`. The attacher API is still called `apm-agent-attach`.
** There is also a slim version of the cli application that does not bundle the Java agent.
It requires the `--agent-jar` option to be set.
** Improved logging +
The application uses {ecs-logging-java-ref}/intro.html[Java ECS logging] to emit JSON logs.
The log level can be configured with the `--log-level` option.
By default, the program is logging to the console but using the `--log-file` option, it can also log to a file.
** Attach to JVMs running under a different user (unix only) +
The JVM requires the attacher to be running under the same user as the target VM (the attachee).
The `apm-agent-attach-standalone.jar` can now be run with a user that has permissions to switch to the user that runs the target VM.
On Windows, the attacher can still only attach to JVMs that are running with under the same user.
** New include/exclude discovery rules +