@@ -548,19 +548,19 @@ class TraceContextTest {
 
     @ParameterizedTest
     @CsvSource(delimiter = '|', value = {
-        // invalid tracestate values: just assume no sample rate is provided
-        "|NaN",
-        "es=|NaN",
-        "es=s|NaN",
-        "es=s:|NaN",
-        "es=s:a|NaN",
+        // invalid tracestate values: no sample rate and header fixed
+        "|NaN|",
+        "es=|NaN|",
+        "es=s|NaN|",
+        "es=s:|NaN|",
+        "es=s:a|NaN|",
         // valid tracestate values with sample rate
-        "es=s:1|1",
-        "es=s:0.42|0.42",
+        "es=s:1|1|es=s:1",
+        "es=s:0.42|0.42|es=s:0.42",
         // other vendors entries
-        "a=123,es=s:0.42|0.42",
+        "a=123,es=s:0.42|0.42|a=123,es=s:0.42",
     })
-    void checkExpectedSampleRate(@Nullable String traceState, double expectedRate) {
+    void checkExpectedSampleRate(@Nullable String traceState, double expectedRate, @Nullable String expectedHeader) {
         Map<String, String> headers = new HashMap<>();
         headers.put(TraceContext.W3C_TRACE_PARENT_TEXTUAL_HEADER_NAME, "00-0af7651916cd43dd8448eb211c80319c-b9c7c989f97918e1-01");
         if (null != traceState) {
@@ -577,8 +577,7 @@ class TraceContextTest {
             .isEqualTo(Double.valueOf(expectedRate));
 
         assertThat(child.getTraceState().toTextHeader())
-                .describedAs("tracestate should be kept as-is")
-                .isEqualTo(traceState);
+                .isEqualTo(expectedHeader);
 
     }
 
